<resources>
    <string name="app_name">Awgy</string>

    <string name="menu">Menu</string>

    <string name="oops">Oops</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="error">An error occurred</string>
    <string name="try_again">Please try again later</string>
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>
    <string name="new_instance">New</string>
    <string name="you">You</string>

    <string name="ago">%1$@ ago</string>
    <string name="week_abbr">w</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day_abbr">d</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour_abbr">h</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute_abbr">m</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="seconds_abbr">s</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>

    <string name="less_than_a_minute_ago">Less than a minute ago</string>
    <string name="yesterday_at">Yesterday at</string>

    <string name="login_signup">Log In - Sign Up</string>
    <string name="code">Code</string>
    <string name="phone_number">Phone Number</string>

    <string name="send">Send</string>
    <string name="sent">Sent</string>
    <string name="seen_by">Seen by</string>
    <string name="seen_by_all">Seen by All</string>
    <string name="seen">Seen</string>
    <string name="sending">Sending</string>
    <string name="add_a_message">Add a message</string>

    <string name="no_one">No One</string>
    <string name="waiting">Waiting</string>
    <string name="please_wait">Please wait</string>
    <string name="happening_now">Happening now</string>

    <string name="photo">photo</string>
    <string name="in_common">in common</string>
    <string name="for_this_hashtag">for this Hashtag</string>

    <string name="blocked">Blocked</string>

    <string name="save">Save</string>
    <string name="settings">Settings</string>

    <string name="only_you">Only You</string>
    <string name="image_saved">Image saved</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="verification">Verification</string>
    <string name="notifications">Notifications</string>
    <string name="set_up">Set Up</string>
    <string name="availability">Availability</string>

    <string name="plus_sign">+</string>
    <string name="hashtag_symbol">#</string>

    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="failed_send">Failed to send the message</string>
    <string name="options">Options</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="unblock">Unblock</string>
    <string name="unblocked">Unblocked</string>
    <string name="undo">Undo</string>
    <string name="block">Block</string>
    <string name="rename">Rename</string>
    <string name="save_number">Save Number</string>
    <string name="warning">Warning</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="vip">VIP</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="info">Information</string>
    <string name="not_available">Not Available</string>
    <string name="error_try_again">Something went wrong, please try again</string>
    <string name="available_from">Available From</string>
    <string name="availbale_to">Available To</string>
    <string name="say_not_available">Or say, not available</string>
    <string name="invited">Invited</string>
    <string name="maximum_reached">Maximum Reached</string>
    <string name="info_max_reached">You can invite a maximum of %1$d persons for now.</string>

    <string name="alone">It\'s only you</string>
    <string name="speaking_alone">You are speaking to yourself</string>
    <string name="no_internet">It seems you are not connected to the Internet</string>

    <string name="new_awgy">New Awgy</string>
    <string name="new_message">New Message</string>
    
    <string name="press_for_new">Press the camera for a new Awgy</string>

    <string name="hashtag">Hashtag</string>
    <string name="hashtags">Hashtags</string>

    <string name="verify">Verify</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    
    <string name="conditions_changed">Conditions Have Changed</string>
    <string name="verif_new_conditions">Let\'s review the new Terms of Use and Privacy Policy</string>
    <string name="review">Review</string>

    <string name="announcement">Announcement</string>
    <string name="details">Details</string>
    <string name="description">Description</string>

    <string name="info_single_notification">has been recorded, but we couldn\'t inform him/her because he/she isn\'t on Awgy yet.\n\nYou should send him/her this message:</string>
    <string name="info_group_notification">have been recorded, but we couldn\'t inform them because they aren\'t on Awgy yet.\n\nYou should send them this message:</string>
    <string name="notification">#%1$s is waiting for your picture - %2$d min (Awgy, on App Store and Google Play)</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied to clipboard</string>
    <string name="cant_send_messages">It seems you can\'t send Messages</string>
    <string name="failed_send_message">Failed to send Message</string>

    <string name="awgy_user">%1$d Awg%2$s in common</string>
    <string name="awgy_hashtag">%1$d Awg%2$s for this Hashtag</string>

    <string name="verification_code">Verification Code</string>
    <string name="info_verify_identity">Let\'s verify your identity</string>
    <string name="send_code">Send Code</string>

    <string name="info_login_signup">Please enter your Phone Number starting with the Country Code</string>

    <string name="error_phone_number">Please make sure you enter an existing Phone Number</string>
    <string name="error_no_code">Make sure you enter a Verification Code</string>
    <string name="error_reinstall">An error occurred, please try logging in again. If it still does not work, try deleting and reinstalling the app</string>
    <string name="error_no_hashtag">Make sure you specify a Hashtag with a minimum of 3 characters</string>
    <string name="error_no_recipients">Make sure you choose at least one Recipient</string>
    <string name="error_edit_phone_number">Please edit your Phone Number first</string>

    <string name="empty_title_stream">No Awgy</string>
    <string name="empty_message_stream">Here will be listed the Awgies you have created or have been invited to.</string>
    
    <string name="empty_title_ongoing">No pending Awgy</string>
    <string name="empty_message_ongoing">When someone sends you an Awgy or when you create one, it is listed here provided that the time limit has not elapsed.</string>
    
    <string name="empty_title_recipients">No One yet</string>
    <string name="empty_message_recipients">Here will be listed the people you know who are using Awgy, ordered by popularity. You should let your friends know about Awgy by creating one.</string>

    <string name="empty_title_hashtags">No Hashtag yet</string>
    <string name="empty_message_hashtags">Here will be listed the Hashtags for the Awgies you have created or have been invited to, ordered by popularity.</string>

    <string name="empty_title_hashtag">No Awgy</string>
    <string name="empty_message_hashtag">Here will be listed the Awgies you have for this Hashtag.</string>
    
    <string name="empty_title_user">No Awgy</string>
    <string name="empty_message_user">Here will be listed the Awgies you have in common.</string>
    
    <string name="empty_title_users">No One yet</string>
    <string name="empty_message_users">Here will be listed the people you know who are using Awgy, ordered by popularity. You should let your friends know about Awgy by creating one.</string>
    
    <string name="empty_title_blocked">No One here</string>
    <string name="empty_message_blocked">Block when encountering annoying people.</string>

    <string name="no_one_on_app">No one in your Contact list is using Awgy yet. Create a new Group Selfie to let them know</string>
    <string name="write_message_yourself">It seems you can\'t send Text Messages. Write it yourself, and tell them to check www.awgy.com</string>
    <string name="warning_delete_account">Are you sure you want to delete the account associated with your Phone Number ? All your data will be deleted</string>

</resources>