<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/mainRelativeLayout" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_login_signup"
            android:textColor="@color/color2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:id="@+id/plusSign"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/plus_sign"
                android:textColor="@color/color2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/countryCodeField"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/code"
                android:inputType="numberDecimal"
                android:textColor="@color/color2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phoneNumberField"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="numberDecimal"
                android:textColor="@color/color2"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:textSize="20sp"
        android:background="@color/color2"
        android:textColor="@android:color/white" />

</LinearLayout>