<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color1"
            android:gravity="end"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/hashtag_symbol"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/hashtagField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:maxLength="15"
            android:background="@color/color1"
            android:hint="@string/hashtag"
            android:inputType="textCapSentences"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/color1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/detailsField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="70"
        android:background="@color/color1"
        android:gravity="top|left"
        android:hint="@string/description"
        android:inputType="textMultiLine|textCapSentences"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/mainRelativeLayout" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

    </RelativeLayout>



</LinearLayout>
